--- a/index.html
+++ b/index.html
@@ -1,8 +1,187 @@
-<html>
-  <head>
-    <title>Home | Elisabeth Lefkovitz</title>
-  </head>
-  <body>
-    <h1>Welcome to my personal website.</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Home - Elisabeth Lefkovitz</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Elisabeth Lefkovitz</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Elisabeth
+                        <span class="text-primary">Lefkovitz</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        Englewood, OH · (937) 474-3470 ·
+                        <a href="mailto:name@email.com">lefkovitze@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">I am a senior information technology management and music double-major at Cedarville University with a passion for creating technological efficiency through innovative management.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/elisabeth-lefkovitz"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/lefkovitze"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">College Technical Intern</h3>
+                            <div class="subheading mb-3">Northrop Grumman</div>
+                            <p>Assisted in the maintenance and development of core network competencies. Explored hardware maintenance and setup requirements with the goal of maximizing setup efficiency. Explored Linux and Windows components of company networks.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2025 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Tech Services Tier 2 Student Technician</h3>
+                            <div class="subheading mb-3">Cedarville University</div>
+                            <p>Maintained and explored university-run audio visual systems to ensure appropriate functionality for both faculty and students. Assisted in the setup of technological layouts for university-sponsored events and training. Reviewed outdated documentation of responsibilities and techniques for maintaining the technological systems and recommended appropriate revisions.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2025 - Present</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Cedarville University</h3>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Information Technology Management</div>
+                            <p>GPA: 3.84</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022 - May 2026</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Cedarville University</h3>
+                            <div class="subheading mb-3">Bachelor of Arts</div>
+                            <div>Music - Piano Pedagogy and Composition</div>
+                            <p>GPA: 3.84</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022 - May 2026</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">By the Way Homeschool</h3>
+                            <div class="subheading mb-3">High School Program</div>
+                            <p>GPA: 4.00</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2022</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fa-brands fa-python"></i></span>
+                            Python
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-code"></i></span>
+                            C#
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-database"></i></span>
+                            SQL Databases
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-brands fa-linux"></i></span>
+                            Linux
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Aside from exploring IT and piano teaching, I enjoy spending most of my time reading in a variety of genres. Two of my favorite genres are fantasy and romantic comedies, but I enjoy almost anything with a strong plotline. Other activities include dancing, doing Tang Soo Do, and playing games with family and friends.</p>
+                    <p class="mb-0">In the music world, I am involved in the Concert Chorale and Madrigal Choir at my university. I am also a part-time church pianist and a member of both OMTA and MTNA.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Awards-->
+            <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Certifications & Awards</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            IBM Data Analytics Certificate
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Excel Associate Certification
+                        </li>   
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Dean's List for 6 semesters - Cedarville University
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Delta Mu Delta Honor Society - Cedarville University
+                        </li>   
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            President's Society Fellows Scholarship - Cedarville University
+                        </li>   
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            "Soli Deo Gloria" Award for Excellence in Music - Cedarville University
+                        </li>   
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
